refactor: Directory structure

--- a/examples/mqtt_demo/Makefile
+++ b/examples/mqtt_demo/Makefile
@@ -3,6 +3,11 @@
 # project subdirectory.
 #
 
-PROJECT_NAME := esp32-qcloud
+PROJECT_NAME := esp-qcloud
+export PROJECT_PATH := $(PWD)
+
+EXTRA_COMPONENT_DIRS += $(realpath ../..)
+
+CFLAGS += -DMBEDTLS_KEY_EXCHANGE__SOME__PSK_ENABLED
 
 include $(IDF_PATH)/make/project.mk
